--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "socket.io": "^4.7.2",
     "twilio": "^4.12.0",
     "unirest": "^0.6.0",
-    "whatsapp-web.js": "^1.23.0"
+    "whatsapp-web.js": "^1.23.0",
+    "winston": "^3.13.0"
   },
   "engines": {
     "node": "20.11.1"
